# promptproof

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-dashboard.yml  promptproof.yml
.promptproof/baselines/: banking77-intent-anthropic.json  support-ticket-triage.json
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/public/data/: runs.json
dashboard/src/: App.tsx  index.css  types.ts
examples/banking77_intent/: dataset.jsonl  prepare.py  suite.anthropic.regressed.yaml  suite.anthropic.yaml  suite.openai.yaml
examples/banking77_intent/prompts/: basic.txt  fewshot.txt  vague.txt
examples/support_ticket_triage/: dataset.jsonl  suite.yaml  suite_regressed.yaml
examples/support_ticket_triage/prompts/: v1_basic.txt  v2_fewshot.txt  v3_regressed.txt
promptproof/: __init__.py  cli.py  compare.py  config.py  parsing.py  report.py  runner.py  store.py  types.py  util.py
promptproof/providers/: __init__.py  anthropic.py  base.py  mock.py  openai.py
promptproof/scorers/: __init__.py  base.py  fields.py  judge.py  structure.py  text.py
tests/: test_compare.py  test_runner.py  test_scorers.py
