[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "promptproof"
version = "0.1.0"
description = "Catch LLM prompt & model regressions before they hit production. An eval + regression-testing harness with a CI gate and a drift dashboard."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Linga Reddy" }]
keywords = ["llm", "evals", "evaluation", "regression-testing", "prompt-engineering", "observability", "ci"]
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
# Real model providers (only needed when you point a target at a live API).
live = ["requests>=2.31"]
dev = ["pytest>=8"]

[project.scripts]
promptproof = "promptproof.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["promptproof*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
